tests/baselines/reference/varArgWithNoParamName.errors.txt
==== tests/cases/compiler/varArgWithNoParamName.ts (1 errors) ====
    function t1(...) {}
                   ~
!!! error TS1003: Identifier expected.